Fixed spacing.

--- a/wp-content/themes/arizona-envelope/assets/styles/layouts/_posts.scss
+++ b/wp-content/themes/arizona-envelope/assets/styles/layouts/_posts.scss
@@ -1,5 +1,5 @@
 article{
-	margin: rem(40) 0;
+	margin: 0 0 rem(50);
 	time{
 		display: block;
 		margin: rem(16) 0;
